--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/nbagr/test_csv#readme",
   "dependencies": {
-    "jest": "^29.5.0",
+    "jest": "^29.5.0"
+  },
+  "devDependencies": {
     "lodash": "^4.17.21"
   }
 }
