--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jest": "^29.5.0"
   },
   "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "lodash": "^4.17.21"
   }
 }
