--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,5 @@ jobs:
           cache: 'npm'
       - run: make install
       - run: make lint
+      - run: node bin/app.js __fixtures__/test.csv
+
